public/css/pages.css
/***
 * All pages
 ***/

body {
  margin: 0;
  padding: 51px 0 0 0;
}

.clickable {
  cursor: pointer;
  cursor: hand;
}

.no-text-select {
  -webkit-user-select: none;
   -khtml-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
       -o-user-select: none;
          user-select: none;
}

.visibility-hidden { visibility: hidden; }

.read-only { cursor: not-allowed; }

.less-right-padding { padding-right: 3px; }
.less-left-padding { padding-left: 3px; }

html.touch .hide-on-touch { display: none; }
html.no-touch .show-on-touch { display: none; }

html .hide-if-no-js { display: none; }
html.js .hide-if-no-js { display: block; }

/***
 * Index page (/)
 ***/

/* Nothing to see here. Move along. */


/***
 * Show page (/:slug)
 ***/

#show-page {
  padding: 10px 0 0 0;
}

.real-time-alert {
  display: none;
  position: fixed;
  width: 100%;
  margin-top: -10px;
  z-index: 1;
  text-align: center;
}
.real-time-alert > div {
  display: inline-block;
  position: relative;
  padding: 6px 10px;
  background-color: #f9edbe;
  border: 1px solid #f0c36d;
  border-top-width: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px;
     -moz-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px;
      -ms-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px;
       -o-box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px;
          box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 4px 0px;
}
/* box-shadows are suuuuper slow on android */
html.android .real-time-alert > div {
  -webkit-box-shadow: none;
     -moz-box-shadow: none;
      -ms-box-shadow: none;
       -o-box-shadow: none;
          box-shadow: none;
}

.navbar { margin-bottom: 5px; }

.navbar-item {
  color: #9d9d9d;
  min-width: 38px;
  border: 0;
  padding: 7px 0;
}
button.navbar-item:last-of-type { margin-right: 8px; }
.navbar-item:hover,   .navbar-item:active,
.navbar-item:hover i, .navbar-item:active i {
  color: #fff;
}
.navbar-inverse .navbar-item:hover,
.navbar-inverse .navbar-item:active,
.navbar-inverse .navbar-item:visited {
  background: none;
}

.nav-sidebar {
  margin-right: -15px;
  margin-bottom: 20px;
  margin-left:  -15px;
}

/* Until we can get it styled appropriately for mobile */
.sidebar { display: none; }

.metronome-body {
  max-width: 446px;
  margin: auto;
  margin-top: 10px;
}

@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto;
    background-color: #f5f5f5;
    border-right: 1px solid #eee;
  }

  .sidebar h4 {
    margin-right: -21px;
    margin-bottom: 12px;
    margin-left: -20px;
    padding: 0 15px;
    color: #666;
  }

  .nav-sidebar {
    margin-right: -21px;
    margin-bottom: 20px;
    margin-left:  -20px;
  }

  .metronome-body { margin-top: 0; }
}

.nav-sidebar > li { border-top: 1px solid #ddd; }
.nav-sidebar > li:last-child,
.nav-sidebar > li.empty {
  border-bottom: 1px solid #ddd;
}
.nav-sidebar > li.empty { padding: 10px 15px; }

.nav-sidebar .actions {
  vertical-align: middle;
  line-height: 39px;
  margin-right: 15px;
  text-align: right;
  position: relative;
  z-index: 1;
  display: none;
}

.nav-sidebar {
  -webkit-touch-callout: none !important;
   -khtml-touch-callout: none !important;
     -moz-touch-callout: none !important;
      -ms-touch-callout: none !important;
       -o-touch-callout: none !important;
          touch-callout: none !important;
}
.nav-sidebar .sort-handle { display: none; }
.nav-sidebar.sorting .sort-handle { display: inline; }

html.no-touch .nav-sidebar li:hover .actions {
  display: inline;
}

html.touch .nav-sidebar li.swiped:hover .actions {
  display: inline;
}

#show-page #tap-control {
  width: 260px;
  height: 260px;
  border-radius: 130px;
  border: 2px solid #555;
  display: inline-block;
  overflow: hidden;
}

#show-page #tap-control .tempo,
#show-page #tap-control .tempo-edit {
  text-align: center;
  font-size: 32pt;
  background-color: #333;
  color: #888;
  border-bottom: 1px solid #555;
  line-height: 1.9;
}

#show-page #tap-control .tempo-edit {
  width: 100%;
  border-width: 0 0 1px 0;
  padding: 0;
  position: absolute;
  z-index: 1;
}
#show-page #tap-control .tempo-edit:focus {
  outline: none;
  background-color: #888;
  color: #333;
}

#show-page #tap-control .tempo.tall {
  height: 260px;
  line-height: 260px;
}

#show-page #tap-control #tap-button {
  display: block;
  text-decoration: none;
  background-color: #444;
  position: absolute;
  top: 82px;
  left: 0;
  bottom: 0;
  right: 0;
  line-height: 116pt;
  font-size: 24pt;
  text-transform: uppercase;
  text-align: center;
  cursor: pointer;
  color: #282828;
  outline: 0;
  -webkit-touch-callout: none;
   -khtml-touch-callout: none;
     -moz-touch-callout: none;
      -ms-touch-callout: none;
       -o-touch-callout: none;
          touch-callout: none;
  -webkit-transition-duration: 0.2s;
   -khtml-transition-duration: 0.2s;
     -moz-transition-duration: 0.2s;
      -ms-transition-duration: 0.2s;
       -o-transition-duration: 0.2s;
          transition-duration: 0.2s;
  -webkit-transition-timing-function: linear;
   -khtml-transition-timing-function: linear;
     -moz-transition-timing-function: linear;
      -ms-transition-timing-function: linear;
       -o-transition-timing-function: linear;
          transition-timing-function: linear;
}
html.no-touch #show-page #tap-control #tap-button:active {
  background-color: #666666;
  color: #444444;
  -webkit-transition-duration: 0s;
   -khtml-transition-duration: 0s;
     -moz-transition-duration: 0s;
      -ms-transition-duration: 0s;
       -o-transition-duration: 0s;
          transition-duration: 0s;
}
html.touch #show-page #tap-control #tap-button.active {
  background-color: #666666;
  color: #444444;
  -webkit-transition-duration: 0s;
   -khtml-transition-duration: 0s;
     -moz-transition-duration: 0s;
      -ms-transition-duration: 0s;
       -o-transition-duration: 0s;
          transition-duration: 0s;
}

#tap-wrapper {
  position: relative;
  width:    290px;
  height:   290px;
  margin:   5px auto 0 auto;
}
#tap-wrapper #tap-control {
  position: absolute;
  top: 15px;
  left: 15px;
  z-index: 1;
}
#tap-wrapper .arcs {
  width: 290px;
  height: 290px;
  position: absolute;
  left: 0;
  top: 0;
}
#tap-wrapper .arc { visibility: hidden; }
#tap-wrapper.beats-per-measure-4.beat-1 .beat-1-4 { visibility: visible; }
#tap-wrapper.beats-per-measure-4.beat-2 .beat-2-4 { visibility: visible; }
#tap-wrapper.beats-per-measure-4.beat-3 .beat-3-4 { visibility: visible; }
#tap-wrapper.beats-per-measure-4.beat-4 .beat-4-4 { visibility: visible; }
#tap-wrapper.beats-per-measure-3.beat-1 .beat-1-3 { visibility: visible; }
#tap-wrapper.beats-per-measure-3.beat-2 .beat-2-3 { visibility: visible; }
#tap-wrapper.beats-per-measure-3.beat-3 .beat-3-3 { visibility: visible; }
#tap-wrapper.beats-per-measure-2.beat-1 .beat-1-2 { visibility: visible; }
#tap-wrapper.beats-per-measure-2.beat-2 .beat-2-2 { visibility: visible; }
#tap-wrapper.beats-per-measure-no-emphasis.beat-1 .beat-1-no-emphasis { visibility: visible; }
#tap-wrapper.beats-per-measure-no-emphasis.beat-2 .beat-2-no-emphasis { visibility: visible; }

.modal-sm, .modal-lg {
  margin: auto;
  margin-top: 71px;
}

.preset-list-dialog ul.nav-sidebar {
  margin-top: -16px;
  margin-bottom: -16px;
}

.preset-list span.preset-title {
  padding: 10px 15px;
  display: block;
}

.connected-user-list {
  text-align: left;
  position: absolute;
  width: 300px;
  right: 3px;
  top: 43px;
  background-color: #333;
  color: #ccc;
  border-radius: 3px;
  border: 1px solid #666;
  -webkit-box-shadow: rgba(16,16,16,0.3) -1px 2px 2px;
   -khtml-box-shadow: rgba(16,16,16,0.3) -1px 2px 2px;
     -moz-box-shadow: rgba(16,16,16,0.3) -1px 2px 2px;
      -ms-box-shadow: rgba(16,16,16,0.3) -1px 2px 2px;
       -o-box-shadow: rgba(16,16,16,0.3) -1px 2px 2px;
          box-shadow: rgba(16,16,16,0.3) -1px 2px 2px;
}
/* box-shadows are suuuuper slow on android */
html.android .connected-user-list {
  -webkit-box-shadow: none;
   -khtml-box-shadow: none;
     -moz-box-shadow: none;
      -ms-box-shadow: none;
       -o-box-shadow: none;
          box-shadow: none;
}

.connected-user-list .tooltip-arrow {
  width: 9px;
  height: 9px;
  background-color: #333;
  border-color: #666;
  position: absolute;
  right: 26px;
  top: -5px;
  border-width: 1px 0 0 1px;
  -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
   -khtml-transform: rotate(45deg); /* Konquerer? */
     -moz-transform: rotate(45deg); /* Firefox */
      -ms-transform: rotate(45deg); /* IE 9 */
       -o-transform: rotate(45deg); /* Opera */
          transform: rotate(45deg);
}

.connected-user-list .user-type {
  margin-bottom: 10px;
}

.connected-user-list ul {
  list-style-type: none;
  padding: 0;
}

.sharing-dialog table tr td { line-height: 34px; }

.sharing-dialog .public-link {
  line-height: 18px;
  margin-left: 20px;
}

.read-only-indicator {
  display: inline-block;
  width: 44px;
  padding: 6px;
  text-align: center;
}

.well {
  background: #eee;
  color: #000;
}

.well.read-only-indicator {
  margin-bottom: 0;
}

.mute-button.mute-on {
  background: #d9534f;
  color: #fff;
}

